fix image wrapping on window resize

--- a/frontend/src/components/DrinkBuilder.css
+++ b/frontend/src/components/DrinkBuilder.css
@@ -21,6 +21,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .CupSizeContainer {
@@ -32,11 +33,11 @@
 }
 
 .DrinkDisplayContainer {
-    position:relative;
     display: flex;
     justify-content: center;
-    width: 400px;
-    height: 600px;
+    align-items: flex-end;
+    flex-grow: 1;
+    max-width: 30vw;
 }
 
 .ActionButtonsContainer {
